--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,14 @@
     ],
     "license": "MIT",
     "require": {
+        "infyomlabs/generator-builder": "dev-master",
+        "ext-json": "*",
+        "darkaonline/l5-swagger": "^7.0",
+        "yajra/laravel-datatables-buttons": "^4.6",
+        "yajra/laravel-datatables-html": "^4.4",
+        "yajra/laravel-datatables-oracle": "~9.0",
+        "zircote/swagger-php": "2.*",
+        "infyomlabs/swagger-generator": "dev-master",
         "php": "^7.2.5",
         "doctrine/dbal": "~2.3",
         "fideloper/proxy": "^4.2",
